# obol

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  entitlements.plist
crates/cli/: Cargo.toml
crates/cli/src/: dashboard.rs  form.rs  main.rs  mode.rs  monthly_spend_screen.rs  recommendations_screen.rs  sources_screen.rs
crates/cli/tests/fixtures/: sources.yaml
crates/core/: Cargo.toml
crates/core/examples/: debug_holdings_extraction.rs  plaid_check_balances.rs  plaid_error_probe.rs  plaid_link_spike.rs  redact_statement_text.rs  webdriver_spike.rs
crates/core/src/: account.rs  checklist.rs  checklist_storage.rs  debt_payoff.rs  debt_payoff_storage.rs  emergency_fund.rs  emergency_fund_storage.rs  engine.rs  holdings.rs  item_usage.rs  item_usage_storage.rs  keychain.rs  lib.rs  lock.rs  migration.rs  monthly_spend.rs  monthly_spend_storage.rs  networth.rs  pii.rs  plaid.rs  plaid_link.rs  plaid_provider.rs  provider.rs  retry.rs  rules_storage.rs  snapshot.rs  sources.rs  statement_import_storage.rs  storage.rs  threshold_band.rs
crates/core/src/statement_import/: apple_card.rs  chase.rs  discovery.rs  fidelity.rs  mod.rs  morgan_stanley.rs  parser.rs  pdf_text.rs  processed_files.rs  vanguard.rs
crates/core/tests/fixtures/plaid/: accounts_balance_get.json  accounts_balance_get_error.json  item_public_token_exchange.json  item_public_token_exchange_error.json  link_token_create.json  link_token_get.json  link_token_get_abandoned_events.json
docs/: spec.md  tasks.md
scripts/: check.sh  create_github_issues.sh  (+1 more)
(+1 files in other folders)
