[package]
name = "obol"
version.workspace = true
edition.workspace = true

[[bin]]
name = "obol"
path = "src/main.rs"

[dependencies]
obol-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1"
secrecy = "0.8"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["std"] }
