[package]
name = "obol-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.8"
async-trait = "0.1"
security-framework = "3"
tokio-retry = "0.3"
serde-saphyr = "0.0"
rand = "0.10"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
